# popcorn

./: .env.example  Actix-DOCS.md  Cargo.toml  README.md  dependencies.md
diagram/: digrame.drawio
src/: lib.rs  main.rs  main_acticx.rs  test_main.rs
src/config/: server_config.rs
src/core/: mod.rs  routes.rs
src/routes/: mod.rs  root_router.rs
src/settings/: config.rs
