[package]
name = "popcorn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
dotenvy = "0.15.7"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
deadpool-postgres = {version = "0.14.0", features = ["serde"]}
derive_more = "0.99.17"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
config = "0.14.0"
serde = {version = "*", features = ["derive"]}
axum = "0.7.5"
tracing = "0.1"
tracing-subscriber = "0.3"
